# iconvwadw

./: .gitignore  Makefile  README.md  meson.build
data/: io.github.rsvzz.iconvwadw.metainfo.xml
flatpak/: io.github.rsvzz.iconvwadw.json
inc/: adwwin.hpp
inc/gtk/: app.hpp  boxbody.hpp  boxctx.hpp  bxbody.hpp  bxnav.hpp  dark_mode.hpp  file_item.hpp  gdataview.hpp  gdview.hpp  imagegestore.hpp  imgevt.hpp  incgtk.hpp  itemfiles.hpp  list_view_content.hpp  nav.hpp  nav_content.hpp  nav_split_view.hpp  navbox.hpp  svgconvert.hpp  svgcv.hpp  tool_view.hpp
inc/gtk/opt-c/: cairo-surface-texture.h  grid_item.h  list_view.h  rsvg-path.h  svg_draw.h
inc/gtk/win/: win_image_view.hpp  winimg.hpp
inc/model/: readdir.hpp  readfile.hpp
snap/: snapcraft.yaml
src/: .adwwin.cpp.swp  adwwin.cpp  main.cpp  meson.build
src/model/: meson.build  readdir.cpp  readfile.cpp
src/model_c/: csfile.c  cstexture.c  grid_item.c  list_item.c  meson.build  svgdraw.c
src/model_gtk/: app.cpp  boxbody.cpp  boxctx.cpp  bxbody.cpp  bxnav.cpp  darkmode.cpp  file_item.cpp  gdataview.cpp  gdview.cpp  imagegestore.cpp  imgevt.cpp  itemfiles.cpp  list_view_content.cpp  meson.build  nav.cpp  nav_content.cpp  nav_split_view.cpp  navbox.cpp  svgconvert.cpp  svgcv.cpp  tool_view.cpp  win_image_view.cpp  winimg.cpp
